@@ -1,3 +1,4 @@
+20130704 added timestamp copy to exiftime
 20071215 version: exiftags 1.01
 20071215 fixed to compile on HP-UX
 20071215 added Canon EOS-5D custom function support (thanks: Albert Max Lai)
